fix: adding gap in `.section__top`

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 2rem;
   margin-bottom: 1.5rem;
 }
 
